Setting the config of postgres database

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,5 +30,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  
+adapter: postgresql
+encoding: unicode
+database: d8tr1ds0b89toa # name your development app something
+host: ec2-54-221-201-165.compute-1.amazonaws.com
+pool: 5
+username: mzvjmfmhvcwmkb
+password: tw4lmsB0djSIq7wHQmHtPxj5_c # or leave blank if you didn't set a password
